--- a/src/containers/Sidebar.css
+++ b/src/containers/Sidebar.css
@@ -4,3 +4,11 @@
   gap: 16px;
   margin: 64px;
 }
+
+.form__container {
+  background-color: rgb(248, 247, 247);
+  width: 320px;
+  min-height: 30px;
+  padding: 16px;
+  border-radius: 20px;
+}
