--- a/src/components/resumeComponents/Education.css
+++ b/src/components/resumeComponents/Education.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin: 0;
+  padding: 0;
 }
 
 .educationCard h2 {
@@ -9,22 +11,6 @@
   padding: 0;
   font-size: 24px;
   font-weight: 600;
-}
-
-.headerContainer {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 8px;
-}
-
-.headerContainer hr {
-  width: 100%;
-  margin-top: 28px;
-  padding: 0;
-  border: 1px solid rgb(0, 0, 0);
 }
 
 .educationNameCity {
@@ -35,6 +21,7 @@
   gap: 128px;
   padding-right: 64px;
   width: 100%;
+  max-height: 24px;
 }
 
 .educationNameCity h3 {
