--- a/src/components/formComponents/PersonalInput.css
+++ b/src/components/formComponents/PersonalInput.css
@@ -7,3 +7,10 @@
   max-height: 0;
   transition: max-height 0.5s ease-out;
 }
+
+h2 {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  gap: 16px;
+}
