--- a/src/containers/Sidebar.css
+++ b/src/containers/Sidebar.css
@@ -15,3 +15,14 @@
   padding: 16px;
   border-radius: 20px;
 }
+
+.form__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.material-icon {
+  font-size: 32px;
+}
