--- a/src/containers/Resume.css
+++ b/src/containers/Resume.css
@@ -1,6 +1,6 @@
 .resumeContainer {
   border: 2px solid rgb(160, 159, 159);
-  min-height: 700px;
+  min-height: 800px;
   min-width: 532px;
   margin-left: 16px;
   margin-top: 16px;
@@ -15,6 +15,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+  font: 0px;
+}
+
+.headerContainer h1 {
+  font-size: 32px;
+  font-weight: 600;
   margin: 0;
   padding: 0;
 }
