--- a/src/containers/Resume.css
+++ b/src/containers/Resume.css
@@ -6,6 +6,7 @@
   margin-top: 16px;
   background: white;
   padding: 32px;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.75);
 }
 
 .headerContainer {
