--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,39 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  gap: 16px;
+}
+
+.sidebar__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  margin-top: 16px;
+}
+
+.button__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.button__container button {
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid #000;
+  color: #000;
+  font-size: 1rem;
+  cursor: pointer;
+  width: 120px;
+}
+
+.clear__resume {
+  background-color: rgb(248, 27, 27);
+}
+
+.download__btn {
+  background-color: rgb(27, 248, 27);
 }
